Bug 451232 - Setting ui.* color pref to empty string or removing pref doesn't immediately reset color to default. r+sr=roc